--- a/nodeBirdAPI/package.json
+++ b/nodeBirdAPI/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.1.0",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
